--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,30 @@ pre-commit = "^3.7.1"
 pytest = "^8.2.2"
 ruff = "^0.5.1"
 
+[tool.ruff]
+select = ["ALL"]
+ignore = [
+    # Self and cls do not require annotations.
+    "ANN101",
+    "ANN102",
+    # Pyright error codes are obnoxiously long. Ignore lint telling you to use them.
+    "PGH003",
+    # Documenting every file is a bit redundant for us.
+    "D100",
+    # No point in documenting magic methods.
+    "D105",
+    # Makes more sense to use `Parameters` in the main class instead of in the `__init__` .
+    "D107",
+    # We do not need cryptographically secure random functions.
+    "S311",
+]
+line-length = 100
+target-version = "py312"
+
+
+[tool.ruff.pydocstyle]
+convention = "numpy"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
