--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -12,8 +12,12 @@ permissions:
   contents: read
 
 jobs:
-  main:
+  test:
     runs-on: ubuntu-latest
+
+    env:
+      POETRY_VIRTUALENVS_CREATE: "false"
+
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
@@ -23,6 +27,11 @@ jobs:
         with:
           python-version: 3.12
           poetry-version: 1.8.3
+
+      - uses: jakebailey/pyright-action@v2
+        with:
+          version: 1.1.370
+          python-version: 3.12
 
       - name: Run Tests
         run: poetry run pytest
