--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -28,7 +28,8 @@ jobs:
           python-version: 3.12
           poetry-version: 1.8.3
 
-      - uses: jakebailey/pyright-action@v2
+      - name: Run Type Checking
+        uses: jakebailey/pyright-action@v2
         with:
           version: 1.1.370
           python-version: 3.12
