--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,9 +35,13 @@ ignore = [
 line-length = 100
 target-version = "py312"
 
-
 [tool.ruff.pydocstyle]
 convention = "numpy"
+
+[tool.pyright]
+typeCheckingMode = "basic"
+pythonVersion = "3.12"
+reportUnnecessaryTypeIgnoreComment = "error"
 
 [build-system]
 requires = ["poetry-core"]
