--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -41,4 +41,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: ghcr.io/thijsfranck/discord-app-example:${{ github.ref_name }}
+          tags: ghcr.io/thijsfranck/discord-app-example:${{ github.ref_name }},ghcr.io/thijsfranck/discord-app-example:latest
