--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,6 +5,7 @@ repos:
     rev: v9.16.0
     hooks:
       - id: commitlint
+        name: Check commit message format
         stages: [commit-msg]
         additional_dependencies: ['@commitlint/config-conventional']
 
@@ -12,15 +13,39 @@ repos:
     rev: v4.6.0
     hooks:
       - id: check-merge-conflict
+        name: Check for merge conflicts
+      - id: check-json
+        name: Check for JSON syntax errors
       - id: check-toml
+        name: Check for TOML syntax errors
       - id: check-yaml
+        name: Check for YAML syntax errors
       - id: end-of-file-fixer
+        name: Ensure files end with a newline
+      - id: pretty-format-json
+        name: Format JSON files
+        args: [--autofix]
       - id: trailing-whitespace
+        name: Trim trailing whitespace
         args: [--markdown-linebreak-ext=md]
 
   - repo: https://github.com/charliermarsh/ruff-pre-commit
     rev: v0.5.1
     hooks:
       - id: ruff
+        name: Check for Python linting errors
         args: [ --fix ]
       - id: ruff-format
+        name: Run Python formatter
+
+  - repo: https://github.com/igorshubovych/markdownlint-cli
+    rev: v0.40.0
+    hooks:
+      - id: markdownlint
+        name: Check for Markdown linting errors
+
+  - repo: https://github.com/streetsidesoftware/cspell-cli
+    rev: v8.10.1
+    hooks:
+      - id: cspell
+        name: Check for spelling errors
