--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,12 +19,18 @@ pymdown-extensions = "^10.8.1"
 pytest = "^8.2.2"
 pytest-asyncio = "^0.23.7"
 pytest-mock = "^3.14.0"
+pytest-sugar = "^1.0.0"
 ruff = "^0.5.1"
 
 [tool.pyright]
 typeCheckingMode = "basic"
 pythonVersion = "3.12"
 reportUnnecessaryTypeIgnoreComment = "error"
+
+[tool.pytest.ini_options]
+filterwarnings = [
+    "ignore:'audioop' is deprecated and slated for removal in Python 3.13",
+]
 
 [tool.ruff]
 line-length = 100
