build: exclude test modules

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,11 @@
 [tool.poetry]
 name = "discord-app-example"
-version = "0.1.0"
+version = "0.0.0"
 description = ""
 authors = ["thijsfranck <thijsfranck@gmail.com>"]
 readme = "README.md"
+license = "MIT"
+exclude = ["**/test__*.py"]
 
 [tool.poetry.dependencies]
 python = "^3.12"
