--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -6,6 +6,7 @@ on:
       - master
     paths:
       - .devcontainer/**
+      - .github/workflows/build.yaml
 
 permissions: write-all
 
@@ -13,6 +14,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout Code
+        uses: actions/checkout@v4
+
       - name: Log in to the Container Registry
         uses: docker/login-action@v3
         with:
