--- a/pyproject.toml
+++ b/pyproject.toml
@@ -85,8 +85,16 @@ prerelease = false
 
 [tool.semantic_release.changelog]
 template_dir = "templates"
-changelog_file = "CHANGELOG.md"
-exclude_commit_patterns = []
+changelog_file = "docs/CHANGELOG.md"
+exclude_commit_patterns = [
+    "^build",
+    "^chore",
+    "^ci",
+    "^pre-commit",
+    "^refactor",
+    "^style",
+    "^test",
+]
 
 [tool.semantic_release.changelog.environment]
 block_start_string = "{%"
@@ -120,7 +128,7 @@ allowed_tags = [
     "test",
 ]
 minor_tags = ["feat"]
-patch_tags = ["fix", "perf"]
+patch_tags = ["docs", "fix", "perf"]
 default_bump_level = 0
 
 [tool.semantic_release.remote]
