ci: ignore changelog in docs folder

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -43,7 +43,7 @@ repos:
     hooks:
       - id: markdownlint
         name: Check for Markdown linting errors
-        args: ["--ignore", "CHANGELOG.md"]
+        args: ["--ignore", "docs/CHANGELOG.md"]
 
   - repo: https://github.com/streetsidesoftware/cspell-cli
     rev: v8.10.1
