--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,6 +4,7 @@
     "dockerfile": "Dockerfile"
   },
   "containerEnv": {
+    "MODE": "development",
     "POETRY_VIRTUALENVS_CREATE": "false"
   },
   "customizations": {
