--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -5,7 +5,7 @@ on:
     branches:
       - master
     paths:
-      - .devcontainer/**
+      - .devcontainer/**/*
       - .github/workflows/build.yaml
 
 permissions: write-all
