--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,13 +1,12 @@
 default_install_hook_types: [commit-msg, pre-commit]
 
 repos:
-  - repo: https://github.com/alessandrojcm/commitlint-pre-commit-hook
-    rev: v9.16.0
+  - repo: https://github.com/commitizen-tools/commitizen
+    rev: v1.17.0
     hooks:
-      - id: commitlint
+      - id: commitizen
         name: Check commit message format
         stages: [commit-msg]
-        additional_dependencies: ['@commitlint/config-conventional']
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.6.0
