--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "discord-app-example"
 version = "0.4.1"
 description = ""
 authors = ["thijsfranck <thijsfranck@gmail.com>"]
-readme = "README.md"
+readme = "docs/README.md"
 license = "MIT"
 exclude = ["**/test__*.py"]
 
